--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "magnific-popup": "^1.1.0",
     "mixitup": "^3.3.1",
     "normalize.css": "^8.0.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "tooltip": "^1.6.1"
   },
   "dependencies": {
-    "rateyo": "^2.3.5"
+    "animate.css": "^3.7.2",
+    "rateyo": "^2.3.5",
+    "wow.js": "^1.2.2"
   }
 }
